# lumapps-sdk

./: .coverage  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT.rst  LICENSE.rst  LICENSE.txt  Makefile  Pipfile  README.md  README.rst  Readme.md  cli.html  codecov.yml  community_use.html  content_use.html  contributing.html  genindex.html  getting_started.html  group_use.html  helpers.html  http_cache.sqlite  index.html  media_use.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  reference.html  requirements-dev.txt  requirements.txt  requirements_dev.txt  search.html  searchindex.js  (+4 more)
.circleci/: config.yml
.github/: CODEOWNERS  issue_template.md
.github/workflows/: ci.yml  commit-message-validator.yml  github-actions-validator.yml  pypi-publish.yml  pypi.yml  release-note.yml  test.yml
.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  datetime.data.json  datetime.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  pathlib.data.json  pathlib.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  textwrap.data.json  textwrap.meta.json  time.data.json  time.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json
CONTRIBUTING/: index.html
LICENSE/: index.html
_modules/: index.html
_modules/lumapps/: client.html
_modules/lumapps_api_helpers/: group.html  media.html  user.html  utils.html
_sources/: cli.rst.txt  community_use.rst.txt  contributing.rst.txt  getting_started.rst.txt  group_use.rst.txt  helpers.rst.txt  index.rst.txt  media_use.rst.txt  reference.rst.txt  user_use.rst.txt
_static/: documentation_options.js
api_client/: index.html
authentication/: index.html
base_client/: index.html
config/: coverage.ini  flake8.ini  mypy.ini  pytest.ini
docs/: CONTRIBUTING.md  LICENSE.md  Makefile  api_client.md  authentication.md  base_client.md  cli.html  contributing.html  environment.md  helpers.html  index.md  lumapps_api_client.md  medias.md  py-modindex.html  search.html  truc.md  widgets.md
docs/_modules/: index.html
docs/_sources/: helpers.rst.txt
docs/guides/: api_client_guide.md  base_client_guide.md  client.md  comments.md  community.md  community_posts.md  community_template.md  content.md  content_template.md  content_type.md  directory.md  directory_entry.md  document.md  folder.md  group_types.md  groups.md  lumapps_jwt.md  media.md  media_tags.md  metadata.md  newsletter.md  notifications.md  roles.md  tutorial.md  user_base.md  user_profile.md  (+2 more)
doctrees/: cli.doctree  contributing.doctree  getting_started.doctree  helpers.doctree  index.doctree
documentation/: .coverage  Makefile  doc-deploy.sh
environment/: index.html
examples/: UploadMedia.py
html/: getting_started.html
lumapps/: __init__.py  base_client.py  cli.py  client.py  config.py  errors.py  lumapps_reponse.py  utils.py
lumapps_api_client/: __init__.py  cli.py  index.html  lib.py
lumapps_api_helpers/: community.py  enums.py  exceptions.py  group.py  media.py  user.py  utils.py
medias/: index.html
scripts/: update_changelog.py
search/: search_index.json
tests/: __init__.py  cli_test.py  client_test.py  community_test.py  group_test.py  helpers.py  lib_test.py  lib_teste.py  lib_tests.py  media_test.py  request_test.py  test_base_client.py  test_cli.py  test_client.py  test_contents_helper.py  test_decorators.py  test_gae_and_not_gae.py  test_helpers.py  test_lumapps_jwt.py  test_media_helpers.py  test_token_client.py  test_utils.py  user_test.py
widgets/: index.html
(+239 files in other folders)
