[tool.poetry]
name = "lumapps-sdk"
version = "1.0.0"
description = "LumApps sdk for python to help you manipulate LumApps Api's"

authors = [
    "Aurelien <aurelien@lumapps.com>"
]

license = "MIT"

readme = "README.md"
repository = "https://github.com/lumapps/lumapps-sdk"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"
mypy = "^0.720"
black = "^19.3b0"
pre-commit = "^1.17.0"
pre-commit-hooks = "^2.2.3"
mkdocs = "^1.0.4"
mkdocs-material = "^4.4.0"
AutoMacDoc = "^0.3"
pytest-sugar = "^0.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
